CHATS_SIT/force-app/main/default/objects/sfsit_t_indiv_disqln_hist__x.object
<CustomObject>
    <description>sfsit$t_indiv_disqln_hist</description>
    <externalDataSource>Heroku_Connect_datasource</externalDataSource>
    <externalName>sfsit$t_indiv_disqln_hist</externalName>
    <fields>
        <fullName>cde_decn_ipv__c</fullName>
        <description>cde_decn_ipv</description>
        <externalDeveloperName>cde_decn_ipv</externalDeveloperName>
        <label>IPV Decision Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cde_type_assign__c</fullName>
        <description>cde_type_assign</description>
        <externalDeveloperName>cde_type_assign</externalDeveloperName>
        <label>Assignment Type Code</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dte_begin_effv__c</fullName>
        <description>dte_begin_effv</description>
        <externalDeveloperName>dte_begin_effv</externalDeveloperName>
        <label>Effective Begin Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dte_change_last__c</fullName>
        <description>dte_change_last</description>
        <externalDeveloperName>dte_change_last</externalDeveloperName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>idn_appeal__c</fullName>
        <description>idn_appeal</description>
        <externalDeveloperName>idn_appeal</externalDeveloperName>
        <label>Appeal ID</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>idn_prim__c</fullName>
        <description>idn_prim</description>
        <externalDeveloperName>idn_prim</externalDeveloperName>
        <label>PRIM ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>idn_prim_hist__c</fullName>
        <description>idn_prim_hist</description>
        <externalDeveloperName>idn_prim_hist</externalDeveloperName>
        <label>PRIM Hist ID</label>
        <length>50</length>
        <referenceTargetField>T_INDIV_DISQLN__c.IDN_EXTNL__c</referenceTargetField>
        <referenceTo>T_INDIV_DISQLN__c</referenceTo>
        <relationshipLabel>Individual Disqualification Legacy History</relationshipLabel>
        <relationshipName>sfsit_t_indiv_disqln_hist</relationshipName>
        <type>IndirectLookup</type>
    </fields>
    <fields>
        <fullName>idn_user_change_last__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>idn_user_change_last</description>
        <externalDeveloperName>idn_user_change_last</externalDeveloperName>
        <label>Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>sfsit_t_indiv_disqln_hist</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>nbr_seq_hist__c</fullName>
        <description>nbr_seq_hist</description>
        <externalDeveloperName>nbr_seq_hist</externalDeveloperName>
        <label>Number Sequence history</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>txt_reason_ipv_alleged__c</fullName>
        <description>txt_reason_ipv_alleged</description>
        <externalDeveloperName>txt_reason_ipv_alleged</externalDeveloperName>
        <label>IPV Alleged Reason</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <label>Individual Disqualification History</label>
    <pluralLabel>Individual Disqualification History</pluralLabel>
</CustomObject>